# eez-lvgl-rp2040-sh1107

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eez-lvgl-rp2040-sh1107.eez-project  main.c
ui/: screens.c
